--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ local.properties
 .loadpath
 .project
 
+VAADIN/
+
 # External tool builders
 .externalToolBuilders/
 
@@ -43,3 +45,4 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
