--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,4 @@ VAADIN/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
+target/
